--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,6 +3,9 @@
     <item android:id="@+id/menu_music" android:checked="true"
         android:icon="@drawable/ic_home"
         android:title="@string/home" />
+    <item android:id="@+id/menu_add"
+          android:icon="@drawable/ic_add"
+          android:title="@string/save" />
     <item android:id="@+id/menu_backup"
         android:icon="@drawable/ic_find"
         android:title="@string/find" />
